--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "motion": "^11.13.1",
     "next": "14.2.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
