--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "resend": "^4.0.1",
     "tsparticles": "^3.7.1"
   },
   "devDependencies": {
